fix navbar z-index on mobile

--- a/style.scss
+++ b/style.scss
@@ -1216,7 +1216,7 @@ a.contact-mail {
 
   /* Scroll Bar */
   .scroll-bar {
-    z-index: 2;
+    z-index: 10;
     top: 0;
     position: fixed;
     width: 100%;
